Colaboratory를 통해 생성됨

--- a/KorNLP.ipynb
+++ b/KorNLP.ipynb
@@ -28,28 +28,28 @@
       "metadata": {
         "id": "5uB0wNVij30T",
         "colab_type": "code",
-        "outputId": "043eaf4a-8799-4e21-8084-4b0c6b07055c",
+        "outputId": "647f24d7-6af6-4c61-da11-ca9d8c665084",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 91
         }
       },
       "source": [
-        "3"
+        "import nltk\n",
+        "nltk.download('punkt')\n",
+        "from nltk.tokenize import word_tokenize  \n",
+        "print(word_tokenize(\"Don't be fooled by the dark sounding name, Mr. Jone's Orphanage is as cheery as cheery goes for a pastry shop.\"))  "
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "['Do', \"n't\", 'be', 'fooled', 'by', 'the', 'dark', 'sounding', 'name', ',', 'Mr.', 'Jone', \"'s\", 'Orphanage', 'is', 'as', 'cheery', 'as', 'cheery', 'goes', 'for', 'a', 'pastry', 'shop', '.']\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -58,28 +58,23 @@
       "metadata": {
         "id": "IJ5sJnpsj6Gm",
         "colab_type": "code",
-        "outputId": "c6e59a25-8e98-44be-c713-a39b9044937c",
+        "outputId": "a8345431-2d74-465d-d81c-7895936221b7",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 55
         }
       },
       "source": [
-        "int(3)"
+        "!git init"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 2
+          "output_type": "stream",
+          "text": [
+            "Initialized empty Git repository in /content/.git/\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -88,208 +83,76 @@
       "metadata": {
         "id": "RKbu78itj8_y",
         "colab_type": "code",
-        "outputId": "294612da-019a-4666-f2ad-1402fc4a03e0",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "colab": {}
       },
       "source": [
-        "float(3)"
+        "!git config --global user.email \"bldev2473@google.com\"\n",
+        "!git config --global user.name \"bldev2473\""
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3.0"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kqA5aK2Rj9rF",
-        "colab_type": "code",
-        "outputId": "41bd502d-1ed0-4bd2-b18d-63d6fea91c20",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "int(3.0)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "-52DOeRVj-3O",
         "colab_type": "code",
-        "outputId": "e1ba8580-c257-4418-f83b-301c14f38aae",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "colab": {}
       },
       "source": [
-        "int(3.5)"
+        "!git add -A"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "cMPKX13Oj_np",
         "colab_type": "code",
-        "outputId": "deac2413-403a-4e9c-d84a-7782f6fb50f3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
+        "colab": {}
       },
       "source": [
-        "int(3.4)"
+        "!git commit -m \"first commit\""
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 6
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "L012H-2gkAM_",
-        "colab_type": "code",
-        "outputId": "600e7cd0-c94a-42f4-d883-1e4e2e738813",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "int(3.7)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 7
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "smkBHXRxkBYT",
-        "colab_type": "code",
-        "outputId": "e70d78db-2259-4f18-93e1-571feddf12b2",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "float(3.0000001) + int(3.0000001)"
-      ],
-      "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "6.000000099999999"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 8
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "LO-w0LKmkGUe",
         "colab_type": "code",
-        "outputId": "da5450ff-c84c-4558-89d1-20dadba84869",
+        "colab": {}
+      },
+      "source": [
+        "!git remote rm origin"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "smkBHXRxkBYT",
+        "colab_type": "code",
+        "outputId": "c5a2f72c-c009-49b6-ae6e-c73c01252afe",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 55
         }
       },
       "source": [
-        "float(3.0000001)"
+        "!git push -u origin master"
       ],
-      "execution_count": 0,
+      "execution_count": 45,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "3.0000001"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 9
+          "output_type": "stream",
+          "text": [
+            "fatal: unable to access 'https://bldev2473:AtangghB8855!@@github.com/bldev2473/KorNLP.git/': Could not resolve host: @github.com\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
